# SlicerVirtualReality

./: CMakeLists.txt  DeveloperGuide.md  FetchVTKExternalModule.cmake  README.md  SlicerVirtualReality.xcf  StartSlicerWithPaths.bat.in  SuperBuild.cmake  SuperBuildPrerequisites.cmake
GUIWidgets/: CMakeLists.txt  qSlicerGUIWidgetsModule.cxx  qSlicerGUIWidgetsModule.h  qSlicerGUIWidgetsModuleWidget.cxx  qSlicerGUIWidgetsModuleWidget.h
GUIWidgets/Logic/: CMakeLists.txt  vtkSlicerGUIWidgetsLogic.cxx  vtkSlicerGUIWidgetsLogic.h
GUIWidgets/MRML/: CMakeLists.txt  vtkMRMLGUIWidgetDisplayNode.cxx  vtkMRMLGUIWidgetDisplayNode.h  vtkMRMLGUIWidgetNode.cxx  vtkMRMLGUIWidgetNode.h
GUIWidgets/MRMLDM/: CMakeLists.txt  vtkMRMLGUIWidgetsDisplayableManager.cxx  vtkMRMLGUIWidgetsDisplayableManager.h
GUIWidgets/Resources/: qSlicerGUIWidgetsModule.qrc
GUIWidgets/Resources/UI/: qSlicerGUIWidgetsModuleWidget.ui
GUIWidgets/VTKWidgets/: CMakeLists.txt  vtkSlicerQWidgetRepresentation.cxx  vtkSlicerQWidgetRepresentation.h  vtkSlicerQWidgetTexture.cxx  vtkSlicerQWidgetTexture.h  vtkSlicerQWidgetWidget.cxx  vtkSlicerQWidgetWidget.h
GUIWidgets/Widgets/: CMakeLists.txt
PointerSimulator/: CMakeLists.txt  PointerSimulator.py
PointerSimulator/Resources/UI/: PointerSimulator.ui
SuperBuild/: External_OpenVR.cmake  External_OpenXR-SDK.cmake  External_OpenXRRemoting.cmake  External_VTKRenderingOpenVR.cmake  External_vtkRenderingOpenVR.cmake  External_vtkRenderingOpenXR.cmake  External_vtkRenderingOpenXRRemoting.cmake  External_vtkRenderingVR.cmake
VR/: CMakeLists.txt  qSlicerVRModule.cxx  qSlicerVRModule.h  qSlicerVRModuleWidget.cxx  qSlicerVRModuleWidget.h
VR/Logic/: CMakeLists.txt  vtkSlicerVRLogic.cxx  vtkSlicerVRLogic.h
VR/MRML/: CMakeLists.txt  vtkMRMLVRLayoutNode.cxx  vtkMRMLVRLayoutNode.h  vtkMRMLVRViewDisplayableManagerFactory.cxx  vtkMRMLVRViewDisplayableManagerFactory.h  vtkMRMLVRViewNode.cxx  vtkMRMLVRViewNode.h
VR/Resources/: qSlicerVRModule.qrc
VR/Resources/UI/: qSlicerVRModuleWidget.ui
VR/Widgets/: CMakeLists.txt  qMRMLVRView.cxx  qMRMLVRView.h  qMRMLVRView_p.h
VirtualReality/: CMakeLists.txt  qSlicerHomeVirtualWidget.cxx  qSlicerHomeVirtualWidget.h  qSlicerVirtualRealityModule.cxx  qSlicerVirtualRealityModule.h  qSlicerVirtualRealityModuleWidget.cxx  qSlicerVirtualRealityModuleWidget.h
VirtualReality/Logic/: CMakeLists.txt  vtkSlicerVirtualRealityLogic.cxx  vtkSlicerVirtualRealityLogic.h
VirtualReality/MRML/: CMakeLists.txt  vtkMRMLVirtualRealityConfigure.h.in  vtkMRMLVirtualRealityLayoutNode.cxx  vtkMRMLVirtualRealityLayoutNode.h  vtkMRMLVirtualRealityViewDisplayableManagerFactory.cxx  vtkMRMLVirtualRealityViewDisplayableManagerFactory.h  vtkMRMLVirtualRealityViewNode.cxx  vtkMRMLVirtualRealityViewNode.h  vtkVirtualRealityViewInteractor.cxx  vtkVirtualRealityViewInteractor.h  vtkVirtualRealityViewInteractorObserver.cxx  vtkVirtualRealityViewInteractorObserver.h  vtkVirtualRealityViewInteractorStyle.cxx  vtkVirtualRealityViewInteractorStyle.h
VirtualReality/MRMLDM/: CMakeLists.txt  vtkMRMLVirtualRealityViewDisplayableManagerFactory.cxx  vtkMRMLVirtualRealityViewDisplayableManagerFactory.h  vtkVirtualRealityComplexGestureRecognizer.cxx  vtkVirtualRealityComplexGestureRecognizer.h  vtkVirtualRealityViewInteractor.cxx  vtkVirtualRealityViewInteractor.h  vtkVirtualRealityViewInteractorObserver.cxx  vtkVirtualRealityViewInteractorObserver.h  vtkVirtualRealityViewInteractorStyle.cxx  vtkVirtualRealityViewInteractorStyle.h  vtkVirtualRealityViewInteractorStyleDelegate.cxx  vtkVirtualRealityViewInteractorStyleDelegate.h  vtkVirtualRealityViewOpenVRInteractor.cxx  vtkVirtualRealityViewOpenVRInteractor.h  vtkVirtualRealityViewOpenVRInteractorStyle.cxx  vtkVirtualRealityViewOpenVRInteractorStyle.h  vtkVirtualRealityViewOpenXRInteractor.cxx  vtkVirtualRealityViewOpenXRInteractor.h  vtkVirtualRealityViewOpenXRInteractorStyle.cxx  vtkVirtualRealityViewOpenXRInteractorStyle.h
VirtualReality/Resources/: qSlicerVirtualRealityModule.qrc
VirtualReality/Resources/Icons/: VirtualReality.xcf
VirtualReality/Resources/UI/: qSlicerVirtualRealityModuleWidget.ui
VirtualReality/SubjectHierarchyPlugins/: CMakeLists.txt  qSlicerSubjectHierarchyVirtualRealityPlugin.cxx  qSlicerSubjectHierarchyVirtualRealityPlugin.h
VirtualReality/Testing/Cxx/: CMakeLists.txt  vtkMRMLVirtualRealityLayoutNodeTest1.cxx  vtkMRMLVirtualRealityViewNodeTest1.cxx
VirtualReality/Widgets/: CMakeLists.txt  qMRMLVirtualRealityDataModuleWidget.cxx  qMRMLVirtualRealityDataModuleWidget.h  qMRMLVirtualRealityHomeWidget.cxx  qMRMLVirtualRealityHomeWidget.h  qMRMLVirtualRealitySegmentEditorWidget.cxx  qMRMLVirtualRealitySegmentEditorWidget.h  qMRMLVirtualRealityTransformWidget.cxx  qMRMLVirtualRealityTransformWidget.h  qMRMLVirtualRealityView.cxx  qMRMLVirtualRealityView.h  qMRMLVirtualRealityView_p.h
VirtualReality/Widgets/DesignerPlugins/: CMakeLists.txt  qMRMLSequenceBrowserPlayWidgetPlugin.h  qMRMLSequenceBrowserSeekWidgetPlugin.h  qMRMLSequenceBrowserToolBarPlugin.cxx  qMRMLSequenceBrowserToolBarPlugin.h  qSlicerSequenceBrowserModuleWidgetsAbstractPlugin.cxx  qSlicerSequenceBrowserModuleWidgetsAbstractPlugin.h  qSlicerSequenceBrowserModuleWidgetsPlugin.cxx  qSlicerSequenceBrowserModuleWidgetsPlugin.h
VirtualReality/Widgets/Resources/: qMRMLVirtualRealityTransformWidget.qrc  qSlicerVirtualRealityModuleWidgets.qrc
VirtualReality/Widgets/Resources/StyleSheets/: VrWidgetStyle.qss
VirtualReality/Widgets/Resources/UI/: qMRMLVirtualRealityDataModuleWidget.ui  qMRMLVirtualRealityHomeWidget.ui  qMRMLVirtualRealitySegmentEditorWidget.ui  qMRMLVirtualRealityTransformWidget.ui
VirtualReality/Widgets/Testing/Cxx/: qMRMLSequenceBrowserWidgetsTest1.cxx
VirtualRealityStub/: CMakeLists.txt  VirtualRealityStub.py
